--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.23.1",
     "@strapi/provider-upload-cloudinary": "4.23.1",
     "@strapi/strapi": "4.23.1",
+    "dotenv": "^16.4.5",
     "pg": "8.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
